--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
   <body class="body">
     <div id="root"></div>
     
-    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+    <script SameSite=None src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
   </body>
 </html>
